lib/core/libsingcast-linux.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package github.com/mapleafgo/singcast/cmd/lib */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "exports.go"

#include <stdlib.h>

#line 1 "cgo-generated-wrapper"

#line 3 "memory.go"

#include <stdlib.h>

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern char* CoreInit(char* optionsJSON);
extern char* CoreStartWithContent(char* content, char* ruleSetProxy);
extern char* CoreStop(void);
extern void CoreDestroy(void);
extern char* CoreCheckConfig(char* content);
extern char* CoreReloadConfig(char* content, char* ruleSetProxy);
extern char* CoreReloadTUN(void);
extern char* CoreSetOverridePackages(char* overrideJSON);
extern void CoreSetLogLevel(int level);
extern void CoreSetError(char* message);
extern void CorePause(void);
extern void CoreWake(void);
extern void CoreResetNetwork(void);
extern char* CoreSelectProxy(char* group, char* tag);
extern char* CoreTestDelay(char* name);
extern char* CoreSetMode(char* mode);
extern char* CoreSetGroupExpand(char* group, int expand);
extern char* CoreQueryProxies(void);
extern char* CoreQueryTraffic(void);
extern char* CoreQueryLogs(int clear);
extern char* CoreQueryConnections(void);
extern char* CoreCloseConnection(char* id);
extern char* CoreCloseAllConnections(void);
extern int CoreNeedFindProcess(void);
extern void CoreWriteMessage(int level, char* message);
extern char* CoreQueryTunOptions(void);
extern void CoreFlushSystemDNS(void);
extern char* CoreQueryMemoryStats(void);
extern char* CoreSetMemoryLimit(long long int bytes);
extern char* CoreGetVersion(void);
extern void CoreSetCallback(void* cb);
extern void CoreSetLocale(char* localeID);
extern void CoreFreeString(char* s);

#ifdef __cplusplus
}
#endif