lib/core/ffi_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// FFI bindings for cff-core (singcast) native library
class LibCoreBindings {
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  LibCoreBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  // --- Lifecycle ---

  ffi.Pointer<ffi.Char> CoreInit(ffi.Pointer<ffi.Char> optionsJSON) {
    return _CoreInit(optionsJSON);
  }

  late final _CoreInitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>>('CoreInit');
  late final _CoreInit = _CoreInitPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CoreStartWithContent(
    ffi.Pointer<ffi.Char> content,
    ffi.Pointer<ffi.Char> ruleSetProxy,
  ) {
    return _CoreStartWithContent(content, ruleSetProxy);
  }

  late final _CoreStartWithContentPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>(
      'CoreStartWithContent');
  late final _CoreStartWithContent = _CoreStartWithContentPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CoreStop() {
    return _CoreStop();
  }

  late final _CoreStopPtr = _lookup<
      ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>('CoreStop');
  late final _CoreStop =
      _CoreStopPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  void CoreDestroy() {
    return _CoreDestroy();
  }

  late final _CoreDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('CoreDestroy');
  late final _CoreDestroy = _CoreDestroyPtr.asFunction<void Function()>();


  ffi.Pointer<ffi.Char> CoreQueryState() {
    return _CoreQueryState();
  }

  late final _CoreQueryStatePtr = _lookup<
      ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>('CoreQueryState');
  late final _CoreQueryState =
      _CoreQueryStatePtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  // --- Config ---

  ffi.Pointer<ffi.Char> CoreCheckConfig(ffi.Pointer<ffi.Char> content) {
    return _CoreCheckConfig(content);
  }

  late final _CoreCheckConfigPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>)>>('CoreCheckConfig');
  late final _CoreCheckConfig = _CoreCheckConfigPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>();

  // --- Logging & System ---

  void CoreSetLogLevel(int level) {
    return _CoreSetLogLevel(level);
  }

  late final _CoreSetLogLevelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('CoreSetLogLevel');
  late final _CoreSetLogLevel =
      _CoreSetLogLevelPtr.asFunction<void Function(int)>();

  void CoreResetNetwork() {
    return _CoreResetNetwork();
  }

  late final _CoreResetNetworkPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('CoreResetNetwork');
  late final _CoreResetNetwork =
      _CoreResetNetworkPtr.asFunction<void Function()>();

  // --- Proxy Control ---

  ffi.Pointer<ffi.Char> CoreSelectProxy(
    ffi.Pointer<ffi.Char> group,
    ffi.Pointer<ffi.Char> tag,
  ) {
    return _CoreSelectProxy(group, tag);
  }

  late final _CoreSelectProxyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('CoreSelectProxy');
  late final _CoreSelectProxy = _CoreSelectProxyPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  int CoreTestDelay(ffi.Pointer<ffi.Char> name, int timeoutMs) {
    return _CoreTestDelay(name, timeoutMs);
  }

  late final _CoreTestDelayPtr = _lookup<
      ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int32)>>(
      'CoreTestDelay');
  late final _CoreTestDelay = _CoreTestDelayPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  ffi.Pointer<ffi.Char> CoreSetMode(ffi.Pointer<ffi.Char> mode) {
    return _CoreSetMode(mode);
  }

  late final _CoreSetModePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>)>>('CoreSetMode');
  late final _CoreSetMode = _CoreSetModePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CoreSetGroupExpand(
    ffi.Pointer<ffi.Char> group,
    int expand,
  ) {
    return _CoreSetGroupExpand(group, expand);
  }

  late final _CoreSetGroupExpandPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>, ffi.Int)>>('CoreSetGroupExpand');
  late final _CoreSetGroupExpand = _CoreSetGroupExpandPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, int)>();

  // --- Queries ---

  ffi.Pointer<ffi.Char> CoreQueryProxies() {
    return _CoreQueryProxies();
  }

  late final _CoreQueryProxiesPtr = _lookup<
      ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>('CoreQueryProxies');
  late final _CoreQueryProxies =
      _CoreQueryProxiesPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> CoreQueryStats() {
    return _CoreQueryStats();
  }

  late final _CoreQueryStatsPtr = _lookup<
      ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>('CoreQueryStats');
  late final _CoreQueryStats =
      _CoreQueryStatsPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> CoreQueryConnections() {
    return _CoreQueryConnections();
  }

  late final _CoreQueryConnectionsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function()>>('CoreQueryConnections');
  late final _CoreQueryConnections =
      _CoreQueryConnectionsPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> CoreQueryMode() {
    return _CoreQueryMode();
  }

  late final _CoreQueryModePtr = _lookup<
      ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>('CoreQueryMode');
  late final _CoreQueryMode =
      _CoreQueryModePtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  // --- Connection Management ---

  ffi.Pointer<ffi.Char> CoreCloseConnection(ffi.Pointer<ffi.Char> id) {
    return _CoreCloseConnection(id);
  }

  late final _CoreCloseConnectionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>)>>('CoreCloseConnection');
  late final _CoreCloseConnection = _CoreCloseConnectionPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CoreCloseAllConnections() {
    return _CoreCloseAllConnections();
  }

  late final _CoreCloseAllConnectionsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function()>>('CoreCloseAllConnections');
  late final _CoreCloseAllConnections = _CoreCloseAllConnectionsPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  // --- System ---

  void CoreFlushSystemDNS() {
    return _CoreFlushSystemDNS();
  }

  late final _CoreFlushSystemDNSPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('CoreFlushSystemDNS');
  late final _CoreFlushSystemDNS =
      _CoreFlushSystemDNSPtr.asFunction<void Function()>();

  ffi.Pointer<ffi.Char> CoreQueryRules() {
    return _CoreQueryRules();
  }

  late final _CoreQueryRulesPtr = _lookup<
      ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>('CoreQueryRules');
  late final _CoreQueryRules =
      _CoreQueryRulesPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> CoreFlushFakeIP() {
    return _CoreFlushFakeIP();
  }

  late final _CoreFlushFakeIPPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>('CoreFlushFakeIP');
  late final _CoreFlushFakeIP =
      _CoreFlushFakeIPPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> CoreFlushDNSCache() {
    return _CoreFlushDNSCache();
  }

  late final _CoreFlushDNSCachePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>('CoreFlushDNSCache');
  late final _CoreFlushDNSCache =
      _CoreFlushDNSCachePtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> CoreTestGroupDelay(
      ffi.Pointer<ffi.Char> group, int timeoutMs) {
    return _CoreTestGroupDelay(group, timeoutMs);
  }

  late final _CoreTestGroupDelayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>, ffi.Int32)>>('CoreTestGroupDelay');
  late final _CoreTestGroupDelay = _CoreTestGroupDelayPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, int)>();

  void CoreTriggerGC() {
    return _CoreTriggerGC();
  }

  late final _CoreTriggerGCPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('CoreTriggerGC');
  late final _CoreTriggerGC =
      _CoreTriggerGCPtr.asFunction<void Function()>();

  // --- Memory ---

  void CoreSetMemoryLimit(int bytes) {
    return _CoreSetMemoryLimit(bytes);
  }

  late final _CoreSetMemoryLimitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.LongLong)>>('CoreSetMemoryLimit');
  late final _CoreSetMemoryLimit =
      _CoreSetMemoryLimitPtr.asFunction<void Function(int)>();

  // --- Version ---

  ffi.Pointer<ffi.Char> CoreGetVersion() {
    return _CoreGetVersion();
  }

  late final _CoreGetVersionPtr = _lookup<
      ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>('CoreGetVersion');
  late final _CoreGetVersion =
      _CoreGetVersionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  // --- Event Callbacks ---

  void CoreSetEventCallback(
      ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Int32, ffi.Pointer<ffi.Char>)>> cb) {
    return _CoreSetEventCallback(cb);
  }

  late final _CoreSetEventCallbackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Void Function(
                          ffi.Int32, ffi.Pointer<ffi.Char>)>>)>>(
      'CoreSetEventCallback');
  late final _CoreSetEventCallback = _CoreSetEventCallbackPtr.asFunction<
      void Function(
          ffi.Pointer<
              ffi.NativeFunction<
                  ffi.Void Function(ffi.Int32, ffi.Pointer<ffi.Char>)>>)>();

  // --- Memory Management ---

  void CoreFreeString(ffi.Pointer<ffi.Char> s) {
    return _CoreFreeString(s);
  }

  late final _CoreFreeStringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>)>>('CoreFreeString');
  late final _CoreFreeString = _CoreFreeStringPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();
}
